Updated listing, detail templates and views. Added views and templates for dead plants

--- a/src/plant_care/templates/base.html
+++ b/src/plant_care/templates/base.html
@@ -25,8 +25,8 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{% url 'plant_care:plant-list' %}">Plant list</a></li>
-                                <li><a class="dropdown-item" href="{% url 'plant_care:plant-create' %}">Add new</a></li>
-
+                                <li><a class="dropdown-item" href="{% url 'plant_care:plant-create' %}">Add new plant</a></li>
+                                <li><a class="dropdown-item" href="{% url 'plant_care:plant-graveyard-list' %}">Plant graveyard</a></li>
                             </ul>
                         </div>
 
@@ -36,7 +36,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{% url 'plant_care:plant-group-list' %}">Group list</a></li>
-                                <li><a class="dropdown-item" href="{% url 'plant_care:plant-group-create' %}">Add new</a></li>
+                                <li><a class="dropdown-item" href="{% url 'plant_care:plant-group-create' %}">Add new group</a></li>
 
                             </ul>
                         </div>
