--- a/src/plant_care/templates/plant_group_listing_page_template.html
+++ b/src/plant_care/templates/plant_group_listing_page_template.html
@@ -10,44 +10,61 @@
 {% block content %}
     {% if groups %}
         <div class="container mt-3">
-            <div class="d-flex justify-content-start mb-2">
-                <a href="{% url 'plant_care:plant-group-create' %}" class="text-decoration-none text-dark fs-3"><b>➕</b></a>
-            </div>
+            <div class="d-flex flex-column align-items-center">
+                <br>
+                <p class="fs-3 text-center">Plant Groups</p>
+                <br>
 
-            <table class="table table-striped table-hover table-bordered table-sm table-responsive">
-                <thead class="table-success">
-                <tr>
-                    <th>Group name</th>
-                    <th>Number of plants</th>
-                    <th class="text-center">Detail</th>
-                    <th class="text-center">Update</th>
-                    <th class="text-center">Delete</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for group in groups %}
+            </div>
+            <div class="d-flex justify-content-center align-items-center mb-4">
+
+                <table class="table table-striped table-hover table-bordered table-sm table-responsive"
+                       style="width: 75%">
+                    <thead class="table-success">
                     <tr>
-                        <td><a class="text-decoration-none text-dark" href="{% url 'plant_care:plant-group-detail' group.pk %}">{{ group.group_name }}</a></td>
-                        <td>{{ group.num_plants }}</td>
-                        <td class="text-center">
-                            <a class="text-decoration-none" href="{% url 'plant_care:plant-group-detail' group.pk %}">🔍</a>
-                        </td>
-                        <td class="text-center">
-                            <a class="text-decoration-none" href="{% url 'plant_care:plant-group-update' group.pk %}">✏️</a>
-                        </td>
-                        <td class="text-center">
-                            <a class="text-decoration-none" href="{% url 'plant_care:plant-group-delete' group.pk %}">🗑️</a>
-                        </td>
+                        <th style="width: 40%">Group name</th>
+                        <th style="width: 30%">Number of plants</th>
+                        <th style="width: 10%" class="text-center">Detail</th>
+                        <th style="width: 10%" class="text-center">Update</th>
+                        <th style="width: 10%" class="text-center">Delete</th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                    {% for group in groups %}
+                        <tr>
+                            <td><a class="text-decoration-none text-dark"
+                                   href="{% url 'plant_care:plant-group-detail' group.pk %}">{{ group.group_name }}</a>
+                            </td>
+                            <td><a class="text-decoration-none text-dark"
+                                   href="{% url 'plant_care:plants-in-group-list' group.pk %}">{{ group.num_plants }}</a>
+                            </td>
+                            <td class="text-center">
+                                <a class="text-decoration-none"
+                                   href="{% url 'plant_care:plant-group-detail' group.pk %}">🔍</a>
+                            </td>
+                            <td class="text-center">
+                                <a class="text-decoration-none"
+                                   href="{% url 'plant_care:plant-group-update' group.pk %}">✏️</a>
+                            </td>
+                            <td class="text-center">
+                                <a class="text-decoration-none"
+                                   href="{% url 'plant_care:plant-group-delete' group.pk %}">🗑️</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="d-flex justify-content-center mt-4">
+                <a href="{% url 'plant_care:plant-group-create' %}" class="btn me-2 btn-outline-success">Add new group</a>
+            </div>
         </div>
     {% else %}
         <p class="text-center mt-5">There are no groups in the database.</p>
         <div class="container">
             <div class="d-flex justify-content-center mb-2">
-                <a href="{% url 'plant_care:plant-group-create' %}" id="a-button" class="btn btn-outline-success"><b>Create a group</b></a>
+                <a href="{% url 'plant_care:plant-group-create' %}" id="a-button" class="btn btn-outline-success"><b>Create
+                    a group</b></a>
             </div>
         </div>
     {% endif %}
