--- a/src/plant_care/templates/plant_listing_page_template.html
+++ b/src/plant_care/templates/plant_listing_page_template.html
@@ -10,49 +10,71 @@
 {% block content %}
     {% if plants %}
         <div class="container mt-3">
-            <div class="d-flex justify-content-start mb-2">
-                <a href="{% url 'plant_care:plant-create' %}" class="text-decoration-none text-dark fs-3"><b>➕</b></a>
+            <div class="d-flex flex-column align-items-center">
+                <br>
+                {% if group %}
+                    <p class="fs-3 text-center">🪴 Plants in '{{ group.group_name }}' 🪴</p>
+                {% else %}
+                    <p class="fs-3 text-center">🪴 Plant Collection 🪴</p>
+                {% endif %}
+                <br>
             </div>
-
-            <table class="table table-striped table-hover table-bordered table-sm table-responsive">
-                <thead class="table-success">
-                <tr>
-                    <th>Name</th>
-                    <th>Group</th>
-                    <th>Purchase Date</th>
-                    <th class="text-center">Detail</th>
-                    <th class="text-center">Update</th>
-                    <th class="text-center">Delete</th>
-                    <th class="text-center">RIP</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for plant in plants %}
+            <div class="d-flex justify-content-center align-items-center mb-4">
+                <table class="table table-striped table-hover table-bordered table-sm table-responsive"
+                       style="width: 75%">
+                    <thead class="table-success">
                     <tr>
-                        <td><a class="text-decoration-none text-dark" href="{% url 'plant_care:plant-detail' plant.pk %}">{{ plant.name }}</a></td>
-                        <td><a class="text-decoration-none text-dark" href="{% url 'plant_care:plant-group-detail' plant.group.pk %}">{{ plant.group }}</a></td>
-                        <td>{{ plant.date|date:"d.m.Y" }}</td>
-                        <td class="text-center">
-                            <a class="text-decoration-none" href="{% url 'plant_care:plant-detail' plant.pk %}">🔍</a>
-                        </td>
-                        <td class="text-center">
-                            <a class="text-decoration-none" href="{% url 'plant_care:plant-update' plant.pk %}">✏️</a>
-                        </td>
-                        <td class="text-center">
-                            <a class="text-decoration-none" href="{% url 'plant_care:plant-delete' plant.pk %}">🗑️</a>
-                        <td class="text-center">
-                            <a class="text-decoration-none" href="#">🪦</a>
-                        </td>
+                        <th style="width: 25%">Name</th>
+                        <th style="width: 25%">Group</th>
+                        <th style="width: 25%">Purchase Date</th>
+                        <th class="text-center">Detail</th>
+                        <th class="text-center">Update</th>
+                        <th class="text-center">Delete</th>
+                        <th class="text-center">RIP</th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                    {% for plant in plants %}
+                        <tr>
+                            <td><a class="text-decoration-none text-dark"
+                                   href="{% url 'plant_care:plant-detail' plant.pk %}">{{ plant.name }}</a></td>
+                            <td><a class="text-decoration-none text-dark"
+                                   href="{% url 'plant_care:plant-group-detail' plant.group.pk %}">{{ plant.group }}</a>
+                            </td>
+                            <td>{{ plant.date|date:"d.m.Y" }}</td>
+                            <td class="text-center">
+                                <a class="text-decoration-none"
+                                   href="{% url 'plant_care:plant-detail' plant.pk %}">🔍</a>
+                            </td>
+                            <td class="text-center">
+                                <a class="text-decoration-none"
+                                   href="{% url 'plant_care:plant-update' plant.pk %}">✏️</a>
+                            </td>
+                            <td class="text-center">
+                                <a class="text-decoration-none"
+                                   href="{% url 'plant_care:plant-delete' plant.pk %}">🗑️</a>
+                            <td class="text-center">
+                                <a class="text-decoration-none" href="{% url 'plant_care:dead-plant' plant.pk %}">🪦</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="d-flex justify-content-center mt-4">
+                <a href="{% url 'plant_care:plant-create' %}" class="btn me-2 btn-outline-success">Add new plant</a>
+            </div>
         </div>
     {% else %}
-        <p class="text-center mt-5">There are no plants in the database.</p>
+        {% if group %}
+            <p class="text-center mt-5">There are no plants in the '{{ group.group_name }}' group.</p>
+        {% else %}
+            <p class="text-center mt-5">There are no plants in the database.</p>
+        {% endif %}
         <div class="container">
             <div class="d-flex justify-content-center mb-2">
-                <a href="{% url 'plant_care:plant-create' %}" id="a-button" class="btn btn-outline-success"><b>Create a plant</b></a>
+                <a href="{% url 'plant_care:plant-create' %}" id="a-button" class="btn btn-outline-success"><b>Add new
+                    plant</b></a>
             </div>
         </div>
     {% endif %}
