Fixed title in templates

--- a/src/plant_care/templates/home_page.html
+++ b/src/plant_care/templates/home_page.html
@@ -4,7 +4,7 @@
 
 
 
-{% block title %}Plant Care Manager{% endblock %}
+{% block bootstrap5_title %}Plant Care Manager{% endblock %}
 
 {% block banner %}
 <section id="banner">
