--- a/src/plant_care/templates/plant_graveyard_listing_page_template.html
+++ b/src/plant_care/templates/plant_graveyard_listing_page_template.html
@@ -4,7 +4,7 @@
 
 
 
-{% block title %}Plant Graveyard{% endblock %}
+{% block bootstrap5_title %}Plant Graveyard{% endblock %}
 
 
 {% block content %}
