--- a/src/plant_care/templates/plant_create_page_template.html
+++ b/src/plant_care/templates/plant_create_page_template.html
@@ -4,7 +4,7 @@
 
 
 
-{% block title %}Create Plant{% endblock %}
+{% block bootstrap5_title %}Create Plant{% endblock %}
 
 {% block content %}
     <div class="container mt-5 mb-5">
