--- a/src/plant_care/templates/plant_group_create_page_template.html
+++ b/src/plant_care/templates/plant_group_create_page_template.html
@@ -4,7 +4,7 @@
 
 
 
-{% block title %}Create plant group{% endblock %}
+{% block bootstrap5_title %}Create Group{% endblock %}
 
 
 {% block content %}
