--- a/src/plant_care/templates/plant_group_update_page_template.html
+++ b/src/plant_care/templates/plant_group_update_page_template.html
@@ -4,7 +4,7 @@
 
 
 
-{% block title %}Update plant group{% endblock %}
+{% block bootstrap5_title %}Update Group{% endblock %}
 
 {% block content %}
     <div class="container mt-5 mb-5">
