--- a/src/plant_care/templates/plant_care_history_listing_page_template.html
+++ b/src/plant_care/templates/plant_care_history_listing_page_template.html
@@ -6,20 +6,40 @@
 
 {% block content %}
     {% if history %}
-        <div class="container mt-3">
+        <div class="container mt-3 mb-3">
             <div class="d-flex flex-column align-items-center">
                 <br>
-                <p class="fs-3 text-center">💧🌱 Care History 🌱💧</p>
-                <br>
+                <div class="d-flex justify-content-center w-75 mb-4">
+                    <p class="fs-3 m-0 text-center">Care History</p>
+                </div>
+
+                <div class="d-flex justify-content-end w-75 mb-4">
+                    <form method="get" action="
+
+
+                            {% if request.GET.start_str %}{% url 'plant_care:care-history-search' request.GET.start_str %}{% else %}{% url 'plant_care:care-history' %}{% endif %}"
+                          class="d-flex" style="width: auto;">
+                        <input type="text" name="start_str" placeholder="Search task/plant/group"
+                               value="{{ request.GET.start_str }}" class="text-center form-control">
+                        <button type="submit" class="btn ms-2 btn-animace">🔎</button>
+                    </form>
+                </div>
+
             </div>
+
             <div class="d-flex justify-content-center align-items-center mb-4">
-                <table class="table table-striped table-bordered table-sm table-hover" style="table-layout: auto; max-width: 75%; word-wrap: break-word;">
+                <table class="table table-striped table-bordered table-sm table-hover"
+                       style="table-layout: auto; max-width: 75%; word-wrap: break-word;">
                     <tbody>
                     {% for log in history %}
                         <tr>
-                            <td colspan="3" class="text-center">
+                            <td class="text-center">
                                 "{{ log.plant.name }}" ("{{ log.plant.group }}") was
                                 <b>{{ log.get_task_type_display }}</b> on {{ log.formatted_task_date }}.
+                            </td>
+                            <td class="text-center">
+                                <a class="text-decoration-none"
+                                   href="{% url 'plant_care:care-history-delete' log.pk %}">🗑️</a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -31,7 +51,8 @@
         <p class="text-center mt-5">There is no care history.</p>
         <div class="container">
             <div class="d-flex justify-content-center mb-2">
-                <a href="{% url 'plant_care:perform-tasks' %}" id="a-button" class="btn btn-outline-success"><b>Tasks</b></a>
+                <a href="{% url 'plant_care:perform-tasks' %}" id="a-button"
+                   class="btn btn-outline-success"><b>Tasks</b></a>
             </div>
         </div>
     {% endif %}
