--- a/src/plant_care/templates/plant_listing_page_template.html
+++ b/src/plant_care/templates/plant_listing_page_template.html
@@ -2,68 +2,81 @@
 {% load static %}
 {% load bootstrap5 %}
 
-
-
 {% block bootstrap5_title %}Plant List{% endblock %}
-
 
 {% block content %}
     {% if plants %}
         <div class="container mt-3">
             <div class="d-flex flex-column align-items-center">
                 <br>
-                {% if group %}
-                    <p class="fs-3 text-center">🪴 Plants in '{{ group.group_name }}' 🪴</p>
-                {% else %}
-                    <p class="fs-3 text-center">🪴 Plant Collection 🪴</p>
-                {% endif %}
+                <div class="d-flex justify-content-center w-75 mb-4">
+                    {% if group %}
+                        <p class="fs-3 m-0">🪴 Plants in '{{ group.group_name }}' 🪴</p>
+                    {% else %}
+                        <p class="fs-3 m-0">🪴 Plant Collection 🪴</p>
+                    {% endif %}
+                </div>
+
+                <div class="d-flex justify-content-end w-75">
+                    <form method="get" class="d-flex" style="width: auto;" action="
+                        {% if request.GET.start_str %}{% url 'plant_care:plant-list-search' request.GET.start_str %}
+                        {% else %}{% url 'plant_care:plant-list' %}{% endif %}">
+                        <input type="text" name="start_str" placeholder="Search plant or group"
+                               value="{{ request.GET.start_str }}" class="text-center form-control">
+                        <button type="submit" class="btn ms-2 btn-animace">🔎</button>
+                    </form>
+                </div>
+
                 <br>
             </div>
-            <div class="d-flex justify-content-center align-items-center mb-4">
-                <table class="table table-striped table-hover table-bordered table-sm table-responsive"
-                       style="width: 75%">
-                    <thead class="table-success">
+        </div>
+
+        <div class="d-flex justify-content-center align-items-center mb-4">
+            <table class="table table-striped table-hover table-bordered table-sm table-responsive"
+                   style="width: 75%">
+                <thead class="table-success">
+                <tr>
+                    <th style="width: 25%">Name</th>
+                    <th style="width: 25%">Group</th>
+                    <th style="width: 25%">Purchase Date</th>
+                    <th class="text-center">Detail</th>
+                    <th class="text-center">Update</th>
+                    <th class="text-center">Delete</th>
+                    <th class="text-center">RIP</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for plant in plants %}
                     <tr>
-                        <th style="width: 25%">Name</th>
-                        <th style="width: 25%">Group</th>
-                        <th style="width: 25%">Purchase Date</th>
-                        <th class="text-center">Detail</th>
-                        <th class="text-center">Update</th>
-                        <th class="text-center">Delete</th>
-                        <th class="text-center">RIP</th>
+                        <td><a class="text-decoration-none text-dark"
+                               href="{% url 'plant_care:plant-detail' plant.pk %}">{{ plant.name }}</a></td>
+                        <td><a class="text-decoration-none text-dark"
+                               href="{{ plant.group.get_absolute_url }}">{{ plant.group }}</a>
+                        </td>
+                        <td>{{ plant.date|date:"d.m.Y" }}</td>
+                        <td class="text-center">
+                            <a class="text-decoration-none"
+                               href="{{ plant.get_absolute_url }}">🔍</a>
+                        </td>
+                        <td class="text-center">
+                            <a class="text-decoration-none"
+                               href="{% url 'plant_care:plant-update' plant.pk %}">✏️</a>
+                        </td>
+                        <td class="text-center">
+                            <a class="text-decoration-none"
+                               href="{% url 'plant_care:plant-delete' plant.pk %}">🗑️</a>
+                        </td>
+                        <td class="text-center">
+                            <a class="text-decoration-none" href="{% url 'plant_care:dead-plant' plant.pk %}">🪦</a>
+                        </td>
                     </tr>
-                    </thead>
-                    <tbody>
-                    {% for plant in plants %}
-                        <tr>
-                            <td><a class="text-decoration-none text-dark"
-                                   href="{% url 'plant_care:plant-detail' plant.pk %}">{{ plant.name }}</a></td>
-                            <td><a class="text-decoration-none text-dark"
-                                   href="{{plant.get_absolute_url}}">{{ plant.group }}</a>
-                            </td>
-                            <td>{{ plant.date|date:"d.m.Y" }}</td>
-                            <td class="text-center">
-                                <a class="text-decoration-none"
-                                   href="{{plant.get_absolute_url}}">🔍</a>
-                            </td>
-                            <td class="text-center">
-                                <a class="text-decoration-none"
-                                   href="{% url 'plant_care:plant-update' plant.pk %}">✏️</a>
-                            </td>
-                            <td class="text-center">
-                                <a class="text-decoration-none"
-                                   href="{% url 'plant_care:plant-delete' plant.pk %}">🗑️</a>
-                            <td class="text-center">
-                                <a class="text-decoration-none" href="{% url 'plant_care:dead-plant' plant.pk %}">🪦</a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="d-flex justify-content-center mt-4">
-                <a href="{% url 'plant_care:plant-create' %}" class="btn me-2 btn-outline-success">Add new plant</a>
-            </div>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="d-flex justify-content-center mt-4">
+            <a href="{% url 'plant_care:plant-create' %}" class="btn me-2 btn-outline-success">Add new plant</a>
+        </div>
         </div>
     {% else %}
         {% if group %}
@@ -78,5 +91,4 @@
             </div>
         </div>
     {% endif %}
-
 {% endblock %}
