--- a/src/plant_care/templates/base.html
+++ b/src/plant_care/templates/base.html
@@ -49,7 +49,7 @@
                             Tasks
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'plant_care:perform-tasks' %}">Plant Care</a></li>
+                            <li><a class="dropdown-item" href="{% url 'plant_care:perform-tasks' %}">Plant care</a></li>
                             <li><a class="dropdown-item" href="{% url 'plant_care:warnings' %}">Warnings</a></li>
                         </ul>
                     </div>
