--- a/src/plant_care/static/css/styles.css
+++ b/src/plant_care/static/css/styles.css
@@ -21,6 +21,7 @@ html, body {
     padding-left: 0;
     padding-right: 0;
     color: #006400 !important;
+    box-shadow: 0 2px 5px mediumseagreen;
 }
 
 #header .nav-link {
@@ -77,6 +78,7 @@ html, body {
     margin-top: auto;
     padding: 20px 0;
     background-color: #e8ffec;
+    box-shadow: 0 -2px 5px mediumseagreen;
 }
 
 .row {
@@ -97,17 +99,67 @@ html, body {
     text-align: center;
 }
 
+.view-header {
+    font-size: 1.5rem;
+    color: darkgreen;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+    transition: color 0.3s ease, text-shadow 0.3s ease;
+}
+
+.view-header:hover {
+    color: seagreen;
+    text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+}
+
+
+#logo img{
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+#logo img:hover {
+    transform: scale(1.1);
+}
+
 .circle-wrapper {
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    border: 5px solid seagreen;
+    border: 4px solid seagreen;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     margin: 0 auto 20px auto;
 }
+
+.home-page {
+    color: rgba(5,47,23,0.99);
+
+}
+@keyframes shine {
+    0% { color: darkgreen; }
+    50% { color: seagreen; }
+    100% { color: mediumseagreen; }
+}
+
+.home-page:hover {
+    animation: shine 1.5s forwards;
+}
+
+.home-page-warning a {
+    color: #333;
+    text-decoration: none;
+    transition: text-shadow 0.3s ease-in-out;
+}
+
+.home-page-warning a:hover {
+    text-shadow: 2px 2px 5px lightgreen;
+}
+
+.home-page-welcome {
+    color: rgba(5,47,23,0.99);
+}
+
 
 .circle-wrapper img {
     max-width: 70%;
@@ -134,6 +186,24 @@ html, body {
 }
 
 .btn-animace:active {
+    transform: scale(0.9);
+}
+
+.btn-animace-danger {
+    background: linear-gradient(45deg, indianred, red);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 8px;
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.btn-animace-danger:hover {
+    box-shadow: 0 4px 10px darkred;
+}
+
+.btn-animace-danger:active {
     transform: scale(0.9);
 }
 
