--- a/src/plant_care/templates/plant_care_history_listing_page_template.html
+++ b/src/plant_care/templates/plant_care_history_listing_page_template.html
@@ -10,7 +10,7 @@
             <div class="d-flex flex-column align-items-center">
                 <br>
                 <div class="d-flex justify-content-center w-75 mb-4">
-                    <p class="fs-3 m-0 text-center">🌱 Care History 🌱</p>
+                    <p class="view-header fs-3 m-0 text-center">🌱 Care History 🌱</p>
                 </div>
 
                 <div class="d-flex justify-content-end w-75 mb-4">
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="d-flex justify-content-center mb-2">
                 <a href="{% url 'plant_care:perform-tasks' %}" id="a-button"
-                   class="btn btn-outline-success btn-animace"><b>Tasks</b></a>
+                   class="btn btn-success btn-animace"><b>Tasks</b></a>
             </div>
         </div>
     {% endif %}
