--- a/src/plant_care/templates/plant_dead_page_template.html
+++ b/src/plant_care/templates/plant_dead_page_template.html
@@ -4,23 +4,22 @@
 
 
 
-{% block bootstrap5_title %}Delete History{% endblock %}
+{% block bootstrap5_title %}RIP Plant{% endblock %}
 
 
 {% block content %}
     <div class="container d-flex justify-content-center align-items-center" style="min-height: 70vh;">
         <div class="d-flex flex-column align-items-center w-100" style="max-width: 75%;">
-            <p class="fs-5 text-center">Are you sure you want to delete this history log:
-                <strong>"{{ history.plant.name }} was {{ history.get_task_type_display }}
-                    on {{ history.formatted_task_date }}"</strong>?</p>
+            <p class="fs-5 text-center">Are you sure you want to move <strong>'{{ plant.name }}'
+                ({{ plant.group }})</strong> into the graveyard?</p>
             <br>
-            <br>
-            <form method="post" action="{% url 'plant_care:care-history-delete' history.pk %}">
+            <form method="post" action="{% url 'plant_care:dead-plant' plant.pk %}">
                 {% csrf_token %}
+                {{ form.as_p }}
+                <br>
                 <div class="d-flex justify-content-center gap-3">
-
                     <a href="{% url 'plant_care:plant-list' %}" class="btn-animace btn-success text-decoration-none">Cancel</a>
-                    <button type="submit" class="btn-animace-danger">Delete</button>
+                    <button type="submit" class="btn-animace-danger">R.I.P.</button>
                 </div>
             </form>
         </div>
