--- a/src/plant_care/templates/plant_detail_page_template.html
+++ b/src/plant_care/templates/plant_detail_page_template.html
@@ -83,7 +83,8 @@
         </div>
         <div class="d-flex justify-content-center mt-4">
             <a href="{% url 'plant_care:plant-update' plant.pk %}" class="btn me-2">✏️ Update</a>
-            <a href="{% url 'plant_care:plant-delete' plant.pk %}" class="btn">🗑️ Delete</a>
+            <a href="{% url 'plant_care:plant-delete' plant.pk %}" class="btn me-2">🗑️ Delete</a>
+            <a href="{% url 'plant_care:dead-plant' plant.pk %}" class="btn">🪦 RIP</a>
         </div>
     </div>
 {% endblock %}
