--- a/src/plant_care/templates/plant_group_create_page_template.html
+++ b/src/plant_care/templates/plant_group_create_page_template.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="container mt-5 mb-5">
-        <h1 class="text-center">Add a new group </h1>
+        <h1 class="view-header text-center">Add a new group </h1>
         <div class="col-md-6 mx-auto">
             <form method="post" action=".">
                 {% csrf_token %}
