--- a/src/plant_care/templates/plant_group_delete_page_template.html
+++ b/src/plant_care/templates/plant_group_delete_page_template.html
@@ -8,11 +8,11 @@
 
 
 {% block content %}
-    <div class="container mt-5 mb-5 position-relative">
-        <div class="d-flex flex-column align-items-center">
-            <p class="fs-5 text-center">Are you sure you want to delete <strong>{{ group.group_name }}</strong>?</p>
-                    <br>
-                    <br>
+    <div class="container d-flex justify-content-center align-items-center" style="min-height: 70vh;">
+        <div class="d-flex flex-column align-items-center w-100" style="max-width: 75%;">
+            <p class="fs-5 text-center">Are you sure you want to delete group <strong>'{{ group.group_name }}'</strong>?</p>
+            <br>
+            <br>
             {% if group.group_name == "Uncategorized" %}
                 <div class="alert alert-warning text-center mb-5" role="alert">
                     The 'Uncategorized' group cannot be deleted!
@@ -22,8 +22,8 @@
                 {% csrf_token %}
                 <div class="d-flex justify-content-center gap-3">
 
-                    <a href="{% url 'plant_care:plant-list' %}" class="btn btn-outline-success">Cancel</a>
-                    <button type="submit" class="btn btn-outline-danger">Delete</button>
+                    <a href="{% url 'plant_care:plant-group-list' %}" class="btn-animace btn-success text-decoration-none">Cancel</a>
+                    <button type="submit" class="btn-animace-danger">Delete</button>
                 </div>
             </form>
         </div>
