--- a/src/plant_care/templates/plant_group_listing_page_template.html
+++ b/src/plant_care/templates/plant_group_listing_page_template.html
@@ -12,7 +12,7 @@
         <div class="container mt-3">
             <div class="d-flex flex-column align-items-center">
                 <br>
-                <p class="fs-3 text-center">Plant Groups</p>
+                <p class="view-header fs-3 text-center">Plant Groups</p>
                 <br>
 
             </div>
