--- a/src/plant_care/templates/plant_listing_page_template.html
+++ b/src/plant_care/templates/plant_listing_page_template.html
@@ -11,9 +11,9 @@
                 <br>
                 <div class="d-flex justify-content-center w-75 mb-4">
                     {% if group %}
-                        <p class="fs-3 m-0">🪴 Plants in '{{ group.group_name }}' 🪴</p>
+                        <p class="view-header fs-3 m-0">🪴 Plants in '{{ group.group_name }}' 🪴</p>
                     {% else %}
-                        <p class="fs-3 m-0">🪴 Plant Collection 🪴</p>
+                        <p class="view-header fs-3 m-0">🪴 Plant Collection 🪴</p>
                     {% endif %}
                 </div>
 
@@ -37,7 +37,7 @@
                 <thead class="table-success">
                 <tr>
                     <th style="width: 25%"><a class="text-decoration-none text-dark" href="?sort={% if request.GET.sort == "name" %}-name{% else %}name{% endif %}">Name</a></th>
-                    <th style="width: 25%"><a class="text-decoration-none text-dark" href="?sort={% if request.GET.sort == "group" %}-group{% else %}group{% endif %}">Group</a></th>
+                    <th style="width: 25%"><a class="text-decoration-none text-dark" href="?sort={% if request.GET.sort == "group__group_name" %}-group__group_name{% else %}group__group_name{% endif %}">Group</a></th>
                     <th style="width: 25%"><a class="text-decoration-none text-dark" href="?sort={% if request.GET.sort == "date" %}-date{% else %}date{% endif %}">Purchase Date</a></th>
                     <th class="text-center">Detail</th>
                     <th class="text-center">Update</th>
@@ -74,7 +74,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="d-flex justify-content-center mt-4">
+        <div class="d-flex justify-content-center mt-4 mb-4">
             <a href="{% url 'plant_care:plant-create' %}" class="btn me-2 btn-success btn-animace">Add new plant</a>
         </div>
 
